--- a/game_client/.gitignore
+++ b/game_client/.gitignore
@@ -1,1 +1,29 @@
 build/
+*.o
+*.obj
+*.exe
+*.out
+*.a
+*.so
+*.dll
+*.dylib
+*.log
+*.dep
+*.gch
+*.pch
+*.swp
+*.swo
+*~
+*.DS_Store
+
+# Ignore generated Makefiles
+Makefile
+
+# Ignore cmake build files
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+install_manifest.txt
+
+# Ignore VSCode settings
+.vscode/
