Add SDL3 support, implement Renderer class, and enhance game structure. Introduce game states, particle system, and improved rendering with textures. Add assets for player, enemies, bullets, and background.

--- a/game_client/CMakeLists.txt
+++ b/game_client/CMakeLists.txt
@@ -1,10 +1,21 @@
 cmake_minimum_required(VERSION 4.1.2)
 project(StarDefender)
 
+find_package(SDL3 CONFIG REQUIRED)
+find_package(SDL3_image CONFIG REQUIRED)
+find_package(SDL3_ttf CONFIG REQUIRED)
+
 add_executable(star_defender
     src/main.cpp
     src/Game.cpp
     src/Player.cpp
     src/Enemy.cpp
     src/Bullet.cpp
+    src/Renderer.cpp
+)
+
+target_link_libraries(star_defender PRIVATE 
+    SDL3::SDL3
+    SDL3_image::SDL3_image
+    SDL3_ttf::SDL3_ttf
 )
